# Lab02OperatingSystems

./: CMakeLists.txt
.github/workflows/: lab2-ci.yml
app/: CMakeLists.txt  app.cpp
app/lib/: useful_library.hpp
lab2_library/: Block.cpp  Block.hpp  BlockCache.cpp  BlockCache.hpp  CMakeLists.txt  CacheKey.hpp  CachePage.hpp  ClockCache.cpp  ClockCache.hpp  ClockEvictor.cpp  ClockEvictor.hpp  constants.hpp  lab2_library.cpp  lab2_library.hpp  permissions.hpp  todo.hpp  types.hpp  util.hpp
lab2_test/: CMakeLists.txt  Lab2SmokeTests.cpp  TestMain.cpp
